@@ -12,6 +12,12 @@
 
 	* pygtk-gdkpixbuf.xml (gtk.gdk.pixbuf_get_formats) Tweak description.
 
+	* pygtk-gdkpixbufloader.xml (set_size) (get_format)
+	Add descriptions for these PyGTK 2.4 methods.
+	(gtk.gdk.pixbuf_loader_new_with_mime_type)
+	Add description for this PyGTK 2.4 function
+	("size-prepared") Add desription of this GTK+ 2.2 signal..
+
 2004-04-21  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gdkgc.xml (get_screen) Add description of this PyGTK 2.2
